[package]
name = "wbs_api"
version = "0.1.0"
authors = ["y-fujiwara <fuji.ys5234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# juniper = "0.14"
juniper = { git = "https://github.com/graphql-rust/juniper" }
# dataloaderをasync/awaitで使う手前juniperを対応版に一旦する場合
# juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
r2d2 = "*"
r2d2_postgres = "*"
actix-web = "2.0.0"
listenfd = "0.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
log = "*"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "*"
actix-rt = "*"
actix-cors = "0.2.0"
actix-multipart = "0.2.0"
chrono = "0.4.10"
validator = "0.10"
validator_derive = "0.10"
dataloader = "0.12"
futures = "0.3"
async-trait = "0.1"
actix-identity = "0.2"
tempfile = "3.1.0"
csv = "1.1.3"
