[package]
name = "wbs_back"
version = "1.1.0"
authors = ["y-fujiwara <fuji.ys5234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# juniper = "0.14"
juniper = { git = "https://github.com/graphql-rust/juniper" }
# dataloaderをasync/awaitで使う手前juniperを対応版に一旦する場合
# juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
async-trait = "0.1"
actix-web = "3"
actix-identity = "0.3"
actix-rt = "2"
actix-cors = "0.5"
actix-multipart = "0.3"
chrono = "0.4"
r2d2 = "0.8"
r2d2_postgres = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
log = "0.4"
diesel = { version = "1", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
validator = { version = "0.14", features = ["derive"] }
dataloader = "0.14"
futures = "0.3"
tempfile = "3"
csv = "1"
